versions/v0.27.1/content/reference/profile/unlock.md
---
title: unlock
weight: 28
---
#### Section profile.**unlock**

This section configures restic command `unlock` .
Information on command and flags is copied from the [restic](https://github.com/restic/restic) manual pages.

The "unlock" command removes stale locks that have been created by other restic processes.

##### Flags used by **resticprofile** only:

| Name              | Type                    | Default  | Notes |
|:------------------|:------------------------|:---------|:------|
| **run-after** |one or more `strings` | |Run shell command(s) after a successful restic command |
| **run-after-fail** |one or more `strings` | |Run shell command(s) after failed restic or shell commands |
| **run-before** |one or more `strings` | |Run shell command(s) before a restic command |
| **run-finally** |one or more `strings` | |Run shell command(s) always, after all other commands |



##### Flags passed to the **restic** command line:

| Name              | Type                    | Default  | Notes |
|:------------------|:------------------------|:---------|:------|
| **remove-all** |`true` / `false` |`false` |remove all locks, even non-stale ones |




{{% notice hint %}}
Flags declared for the **restic** command line in section *[profile](../profile)*
can be overridden in this section.
{{% /notice %}}


{{< pageversions "v0.28.1" "v0.29.1" "v0.30.1" "v0.31.0" "v0.32.0" >}}
